<resources>
    <string name="app_name" translatable="false">Smurf Config Editor</string>
    <string name="action_settings">Settings</string>
    <string name="action_info">Info</string>

    <string name="no_config_card_text">
        Doesn\'t look like you imported any config.
        \n\n\n\nYou can do so from the menu options ;)
    </string>

    <string name="configNF">The config file wasn\'t found. Create one?</string>

    <string name="bamboozle_face" translatable="false">;)</string>
    <string name="nu_config">Tap me to import config</string>

    <string name="import_config">Import Config"</string>
    <string name="configFile" translatable="false">smurf.kernel.config</string>
    <string name="StoragePermDenied">Storage Permission is Required!</string>
    <string name="save">S A V E</string>

    <string name="swwRC">Something went wrong while reading config</string>
    <string name="swwImport">Something went wrong while importing config</string>
    <string name="noRoot">No root access: Can\'t apply settings</string>

    <string name="importRoot">Config loaded from root</string>
    <string name="importInflate">Config inflated from resource</string>
    <string name="infoCard">Information about the config</string>
    <string name="needsRestart">- Needs restart</string>
    <string name="profileVersion" translatable="false">profile.version</string>
    <string name="tapSelect">- Tap to select an option -</string>
    <string name="modalTitle" translatable="false">%s : %s</string>
    <string name="numSerial" translatable="false">%d)</string>

    <string name="autoImportConfigSetting">Always import config on app start</string>
    <string name="autoUpdateConfigSetting">Run config application script on saving</string>
    <string name="pickAccentColor">My favorite accent color is that one over there -></string>

    <string name="configStamp" translatable="false">
        #############################################################################\n# Copyright Pappschlumpf and xXx\n# Usage without our permission not allowed!!\n#\n# Configuration file to allow customize the Smurf-Kernel Installation\n# Generated by Smurf Config Editor made by tanish2k09\n#\n# Smurf kernel by XDA Senior Member @pappschlumpf\n#############################################################################\n#\n# ----- How to Guide ------\n#\n# For each Option you will find multiple lines with all available values\n# Simply remove the # in front of the option you want to apply\n# and add # in front of all remaining options in that category\n#\n# The settings are ordered in this order:\n# - Battery friendy (top)\n# - Performance friendly (bottom)\n#############################################################################\n
    </string>

    <string name="credit">- Made by tanish2k09 -</string>
    <string name="developer" translatable="false">tanish2k09</string>
    <string name="gimmeMoni">Give me all your money here</string>
    <string name="telegram" translatable="false">Telegram</string>
    <string name="paypalLink" translatable="false">https://www.paypal.me/tanish2k09</string>
    <string name="xdaLink" translatable="false">https://forum.xda-developers.com/member.php?u=5913332</string>
    <string name="telegramLink" translatable="false">https://t.me/tanish2k09</string>
    <string name="emailLink" translatable="false">mailto:tanish2k09.dev@gmail.com</string>
    <string name="discordLink" translatable="false">https://discordapp.com/channels/@me/328440224130793472/</string>
    <string name="contactMe">CONTACT ME</string>

    <string name="materialcolorpicker__app_name">Android Material Color Picker Dialog</string>
    <string name="materialcolorpicker__descLib">Material Color Picker Dialog</string>
    <string name="materialcolorpicker__errHex">Hex Code Format incorrect</string>
    <string name="materialcolorpicker__inputColor">Color: </string>
    <string name="materialcolorpicker__btnSelectColor">Select</string>
    <string name="materialcolorpicker__hash" translatable="false">#</string>

    <string name="noCategoryLiteral">Not categorized</string>
    <string name="useTitleOnCards">Use titles on config card instead of value</string>
    <string name="useBlackBG">Use pure black background instead of dark</string>

    <string name="ConfigPath1" translatable="false">/init.smurf.sh</string>
    <string name="ConfigPath2" translatable="false">/data/adb/modules/smurf/post-fs-data.sh</string>
    <string name="ConfigPath3" translatable="false">/data/adb/modules/smurf/post-fs-data.sh</string>

    <string name="colorPickerLiteral">Color Picker Source Code</string>
    <string name="colorPickerLink" translatable="false">https://github.com/tanish2k09/android-material-colour-picker-dialog-dark</string>
    <string name="SourceCodeLiteral">SCE Source Code</string>
    <string name="SourceCodeLink" translatable="false">https://github.com/tanish2k09/SmurfConfigEditor</string>

    <string name="displayVersion" translatable="false">- Version 1.2 -</string>
</resources>
